Finalizing db migration for icon as blob